# nautypy

./: LICENSE.rst  README.rst  install.sh  meson.build
docs/_sources/: index.rst.txt
docs/doctrees/: environment.pickle  hashable_containers.doctree  index.doctree  nautypy.doctree
docs/html/: .buildinfo  index.html  nautypy.html  objects.inv  searchindex.js
docs/html/_sources/: hashable_containers.rst.txt  index.rst.txt  nautypy.rst.txt
docs/source/: conf.py
examples/: 3flavor.py  3flavor_hostgraphs.py
examples/c/: meson.build  polygon.c
include/: meson.build  nautypy.h
python/: cffibuild_nautypy.py  install.sh  nautypy.py  setup.py
python/hashable_containers/: hashable_containers.py  install.sh  setup.py
python/nautypy/: cffibuild_nautypy.py  install.sh  nautypy.py  requirements.txt  setup.py
src/: meson.build  nautypy.c
test/: comparison.py  interactive_testing.py  random_graphs.py  test_nautypy.py
